make my profile prettier

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <h1>That's me</h1>
         <div class="card" id="text">
-          My name is Diffat Elicka. I am a student now.
+          My name is Diffat Elicka. I am a 16-year-old student now. I love watching Doctor Who and My Little Pony, and of course, coding, physics and history.
+          I'm a wiki editer on <a href="https://mlp.huijiwiki.com/wiki/MLP中文维基">MLP Chinese Wiki</a> and <a href="https://austraeoh.huijiwiki.com/wiki/首页">Austraeoh Chinese Wiki</a>. My best friend forever is Dopami Korpela.
         </div>
 
       <h2>My sociel media</h2>
@@ -37,22 +38,19 @@
       <h3>My favorite city</h3>
        <div class="card middle">
           <table>
-            <thead>
+            <thead class="middle">
               <tr>
                 <th>Name</th>
-                <th>number</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/Chengdu" class="color-orange" >Chengdu</a></td>
-                <td>NO.1</td>
               </tr>
             </tbody>
             <tbody>
               <tr>
                 <td><a href="https://en.wikipedia.org/wiki/Constantinople" class="color-orange">Constantinople</a></td>
-                <td>NO.2</td>
               </tr>
             </tbody>
           </table>
