make my profile prettier

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
       <ul class="card middle">
         <li>
-          <a href="https://www.linkedin.com/in/boris-paillard-86722670" class="color-green">
-            <i class="fa fa-wechat"></i> Wechat(Not mine yet)
+          <a class="color-green">
+            <i class="fa fa-wechat"></i> Wechat(Not Working yet)
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/bpapillard" class="color-green">
-            <i class="fa fa-qq"></i> QQ(Not mine yet)
+          <a class="color-green">
+            <i class="fa fa-qq"></i> QQ:903869629(Not Working yet)
           </a>
         </li>
       </ul>
