make my profile prettier

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <h2>My sociel media</h2>
 
       <ul class="card middle">
-        <li>
+        <li style="list-style-type:none;">
           <a class="color-green">
             <i class="fa fa-wechat"></i> Wechat(Not Working yet)
           </a>
         </li>
-        <li>
+        <li style="list-style-type:none;">
           <a class="color-green">
             <i class="fa fa-qq"></i> QQ:903869629(Not Working yet)
           </a>
@@ -37,23 +37,17 @@
 
       <h3>My favorite city</h3>
        <div class="card middle">
-          <table>
-            <thead class="middle">
-              <tr>
-                <th>Name</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/Chengdu" class="color-orange" >Chengdu</a></td>
-              </tr>
-            </tbody>
-            <tbody>
-              <tr>
-                <td><a href="https://en.wikipedia.org/wiki/Constantinople" class="color-orange">Constantinople</a></td>
-              </tr>
-            </tbody>
-          </table>
+          <ul>
+            <li style="list-style-type:none;">
+              <a href="https://en.wikipedia.org/wiki/Chengdu" class="color-orange" >Chengdu</a>
+            </li>
+            <li style="list-style-type:none;">
+              <a href="https://en.wikipedia.org/wiki/Constantinople" class="color-orange">Constantinople</a>
+            </li>
+            <li style="list-style-type:none;">
+              <a href="https://en.wikipedia.org/wiki/New York" class="color-orange">Ner York</a>
+            </li>
+          </ul>
         </div>
       </div>
   </body>
