make my profile prettier

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="card middle">
         <li style="list-style-type:none;">
           <a class="color-green">
-            <i class="fa fa-wechat"></i> Wechat(Not Working yet)
+            <i class="fa fa-wechat"></i> Wechat:马国博士(Not Working yet)
           </a>
         </li>
         <li style="list-style-type:none;">
